[package]
name = "zvault"
version = "0.5.0"
authors = ["Dennis Schwerdel <schwerdel@googlemail.com>"]
description = "Deduplicating backup tool"

[profile.release]
lto = true

[dependencies]
serde = "1.0"
rmp-serde = "0.13"
serde_yaml = "0.7"
serde_utils = "0.6"
serde_bytes = "0.10"
squash-sys = "0.9"
quick-error = "1.1"
blake2-rfc = "0.2"
murmurhash3 = "0.0.5"
chrono = "0.4"
clap = "^2.24"
log = "0.4"
byteorder = "1.0"
ansi_term = "0.11"
sodiumoxide = "0.0.16"
libsodium-sys = "0.0.16"
filetime = "0.1"
regex = "0.2"
fuse = "0.3"
lazy_static = "1.0"
rand = "0.4"
tar = "0.4"
xattr = "0.2"
crossbeam = "0.3"
pbr = "1.0"
users = "0.6"
time = "*"
libc = "0.2"
runtime-fmt = "0.3"
locale_config = "^0.2.2"
mmap = "0.1"

[features]
default = []
bench = []
